--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-color: thistle;
     margin: 0;
     padding:0;
     font-family: 'Roboto';
@@ -28,3 +29,13 @@ a {
     color: rgb(107, 22, 128);
     transition: ease-in-out color .15s;
 }
+
+.footer  {
+    position: fixed;
+    height: 50px;
+    background-color: red;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+      
+} 
