--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6b1094;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: right;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
