--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,4 +1,4 @@
-.footer-container {
+/* .footer-container {
    background-color: #242424;
    padding: 4rem 0 2rem 0;
    display: flex;
@@ -7,4 +7,4 @@
    align-items: center;
  }
 
- 
+  */
