--- a/src/components/reviews/star.css
+++ b/src/components/reviews/star.css
@@ -1,10 +1,17 @@
-body {
-  font-family:"Open Sans", Helvetica, Arial, sans-serif;
-  color:#555;
-  max-width:680px;
-  margin:0 auto;
-  padding:0 20px;
-}
+footer {
+   background-color: #242424;
+   padding: 4rem 0 2rem 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
+ }
+
+ 
 
 * {
   -webkit-box-sizing:border-box;
