--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,90 @@
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  
+html, body {
+  padding-top: 65px;
+  margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+img {
+  width: 100%;
+}
+
+.jumbotron {
+  background: none;
+}
+
+.navbar {
+  color: #0e365d;
+  background: #bceeeb;
+}
+
+.standalone-btn {
+  margin: .5em;
+}
+
+.nav-buttons {
+  margin-right: auto;
+}
+
+.buildings-list {
+  height: 70vh;
+}
+
+.btn-group-btn {
+  margin: none;
+}
+
+.saved-homes-header {
+  margin-top: 4em
+}
+
+.nav.nav-pills .nav-link {
+  background-color: white;
+  color: #06253e;
+}
+
+.nav.nav-pills .nav-link.active {
+  background-color: #06253e;
+  color: white;
+}
+
+.saved-homes-profile-update-card {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.building-row {
+  padding-bottom: 2em;
+}
+
+.sort-bar {
+  padding-bottom: 2em;
+}
+
+.col-no-padding {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.emailField {
+  padding-top: 1em;
+  padding-bottom: 1.5em
+}
+
+.saved-homes-empty {
+  padding-top: 3em;
+  padding-bottom: 4em
+}
+
+.btn-save-building-card {
+  padding: none;
+  margin: none;
+}
+
+.resources-list {
+  list-style-type: none;
+}
+
+.gm-style .gm-style-iw-c {
+  padding-top: 0px
+}
