--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,10 +1,12 @@
-/* .footer-container {
-   background-color: #242424;
-   padding: 4rem 0 2rem 0;
+.footer {
+   background-color: #466668;
+   padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   height:"10vh";
+
  }
 
-  */
+ 
