--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -18,7 +18,7 @@
  
   .btn--outline {
     background-color: transparent;
-    color: #fff;
+    color: rgb(70, 8, 95);
     padding: 8px 20px;
     border: 1px solid var(--primary);
     transition: all 0.3s ease-out;
@@ -38,7 +38,7 @@
   .btn--medium:hover {
     transition: all 0.3s ease-out;
     background: #fff;
-    color: #242424;
+    color: #660b81;
     transition: 250ms;
   }
 
